# mycashflow

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  ROADMAP.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2026_06_20_1736-f9bb87c97cc4_initial_migration.py  2026_06_20_2017-e220d04c1514_add_model_user.py  2026_06_20_2207-62646f132e75_add_model_user.py  2026_06_21_0842-5ad7fb1864f7_change_tokens_table.py  2026_06_21_1257-a18826c91512_add_currency_model.py  2026_06_22_1713-1eb371e1aeee_make_currency_private_to_user.py  2026_06_22_1900-cdf4eef428bd_add_currency_model.py
src/config/: messages.py  settings.py  templates.py
src/dependencies/: db.py
src/middleware/: logging.py
src/models/: __init__.py  base.py  currency.py  token.py  user.py
src/mycashflow/: main.py
src/mycashflow/cli/: console_ui.py  console_ui_copy.py
src/mycashflow/logging/: logger.py
src/mycashflow/models/: entry.py  transaction.py
src/mycashflow/services/: entry_service.py  transaction_service.py
src/mycashflow/storage/: storage.py
src/repositories/: currency.py  users.py
src/routers/: auth.py  currency.py
src/schemas/: currency.py  token.py  users.py
src/services/: auth.py  currency.py  dependencies.py
src/templates/: base.html  currencies.html  currency_add.html  currency_edit.html  index.html  login.html  register.html
src/utils/: logging.py
src/web/: auth.py  currency.py  main.py
tests/: test_model_entry.py  test_model_transaction.py
