[project]
name = "mycashflow"
version = "0.2.0"
description = ""
authors = [
    {name = "Vitalii",email = "vitaly.savenko12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg-binary (>=3.3.4,<4.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pwdlib[bcrypt] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.13.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest (>=9.0.3,<10.0.0)"
]
